[package]
name = "xxhrs"
version = "0.0.1"
authors = ["Karolin Varner <karo@cupdev.net>"]
edition = "2018"
license = "BSD-3-Clause"
description = ""
readme = "readme.md"
repository = "https://github.com/koraa/huniq"
categories = [""]
keywords = []

[dependencies]
getrandom = "^0.1.14"
tiny-keccak = { version = "^2.0.2", features = ["shake"] }

[build-dependencies]
bindgen = "^0.52.0"
cc = { version = "^1.0.48", features = ["parallel"] }
anyhow = "^1.0.26"
shell-words = "^0.1.0"

[dev-dependencies]
doc-comment = "0.3.3"
