[package]
name = "xxhrs"
version = "0.0.2"
authors = ["Karolin Varner <karo@cupdev.net>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Safe XXHash and XXH3 bindings."
readme = "readme.md"
repository = "https://github.com/koraa/xxhrs"
categories = ["algorithms"]
keywords = ["hash", "xxhash", "bindings", "xxh3", "xxhash"]

[dependencies]
getrandom = "0.1.14"
tiny-keccak = { version = "2.0.2", features = ["shake"] }

[build-dependencies]
bindgen = "0.54.0"
cc = { version = "1.0.54", features = ["parallel"] }
anyhow = "1.0.31"
shell-words = "1.0.0"

[dev-dependencies]
doc-comment = "0.3.3"

[profile.release]
lto = true
