[package]
name = "xxhrs"
version = "2.0.0"
authors = ["Karolin Varner <karo@cupdev.net>"]
edition = "2018"
license = "BSD-3-Clause"
description = "Safe XXHash and XXH3 bindings."
readme = "readme.md"
repository = "https://github.com/koraa/xxhrs"
categories = ["algorithms"]
keywords = ["hash", "xxhash", "bindings", "xxh3", "xxhash"]
documentation = "https://docs.rs/xxhrs"

[features]
default = ["random_entropy"]
random_entropy = ["getrandom"]

[dependencies]
getrandom = { version = "0.2.0", optional = true }

[build-dependencies]
bindgen = "0.55.1"
cc = { version = "1.0.59", features = ["parallel"] }
anyhow = "1.0.32"
shell-words = "1.0.0"

[dev-dependencies]
doc-comment = "0.3.3"
criterion = "0.3.3"
twox-hash = "1.5.0"
fxhash = "0.2.1"
ahash = "0.4.5"
walkdir = "2.3.1"
regex = "1.3.9"
anyhow = "1.0.32"
csv = "1.1.3"
resiter = "0.4.0"
serde_json = "1.0.57"
serde = "1.0.116"

[profile.release]
lto = true

[[bench]]
name = "bench"
harness = false
test = false
doctest = false
